--- a/aboutMe.html
+++ b/aboutMe.html
@@ -45,18 +45,34 @@
 			<!-- Interests label -->
 			<h2>
 			
-				Interests
+				A little about my interests...
 			
 			</h2>
 			<!-- end Interests label -->
 			
-			<!-- Interests text -->
+			<!-- p1 -->
 			<p>
 			
-			I like video games, specifically those in the FPS genre. Currently, I play Valorant and Delta Force. Games I've played in the past include but are not limited to: Halo, CoD, and Battlefield. I also enjoy playing soccer, whether it's by myself or with other people. Food is another big thing, whether it's cooking or eating it. Another one of my interests has to be technology. From military vehicles to mechanical pencils, I find moving parts fascinating. 
+				In my leisure time, I play video games a lot. I enjoy playing them by myself or with family/friends. I have my own PC and I play mostly Valorant and Roblox. A Roblox game that I've gotten into recently is 21, a SAW-esque blackjack game. On my phone, I play CoDM and Delta Force. On my Xbox, I play some of CoD, Halo, Battlefield, Ghost Recon, etc. I do prefer playing on my PC just because I've been playing on PC since I was 7. However, I've played a lot less of games because of school and college applications.
 			
 			</p>
-			<!-- end Interests text -->
+			<!-- end p1 -->
+			
+			<!-- p2 -->
+			<p>
+			
+				<br> I also enjoy playing soccer, whether it's by myself or with other people. Soccer is a good source of exercise and it's really entertaining to play. Even if you don't feel like playing soccer, watching soccer isn't entirely bad either. There's great footage of cray shots taken by professionals or amateurs. I play center back, near the goalie. I serve as the deterrent so people have a hard time taking the shot and most of the time, I succeed in blasting the ball to the other side of the field.
+			
+			</p>
+			<!-- end p2 -->
+			
+			<!-- p3 -->
+			<p>
+			
+				<br> Another one of my interests has to be technology. Technology has practically embedded itself into my life since I was born because my dad flew to the US ahead of my immediate family. We made use of a laptop to call him everyday, unintentionally making technology such an essential part of our lives. Whether it's military appliances to rockets to mechanical pencils, the mechanisms within have always fascinated me.
+			
+			</p>
+			<!-- end p3 -->
 			
 			<!-- Goals label -->
 			<h2>
