--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			<h1>
 
 				<!-- pagani image -->
-				<div style="float: left; padding: 30px;">
+				<div style="float: left; padding: 30px 30px 30px 0px;">
 		
-					<img src="photos/per6RobertPagani.jpg" alt="Pagani in motion" width="700px">
+					<img src="photos/per6RobertPagani.jpg" alt="Pagani in motion" width="500px">
 			
 				</div>
 			
@@ -93,7 +93,7 @@
 			<!-- text -->
 			<p style="font-size: 17px;">
 			
-				I'm someone who enjoys both the excitement of competition and the curiosity of discovery. From learning new things to just playing around, I'm always doing something. All of which contribute to refining or adding to my skillset.
+				I'm someone who enjoys both the excitement of competition and the curiosity of discovery. From learning new things to just playing around, I'm always doing something. Click below to learn more about me.
 			
 			</p>
 			<!-- end text -->
