--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<!-- intro text -->
 			<p>
 		
-	    	  Hello, my name is Robert, and I am a high school student at El Camino High School in Oceanside, CA. I plan to attend college after graduation, with strong interests in problem-solving, math, and puzzles. I also enjoy playing FPS video games, spending time with family and friends, and exploring my curiosity about cars and their performance. Originally from the Philippines, where I lived for the first six years of my life, I bring a unique perspective shaped by both my heritage and my experiences growing up in Oceanside. <br>
+	    	  Hello, my name is Robert, and I am a high school student at El Camino High School in Oceanside, CA. I'm currently taking a web design class and have completed a graphic design course prior. Hope you enjoy my website.  <br>
 			
 			</p>
 			<!-- end intro -->
@@ -93,7 +93,7 @@
 			<!-- text -->
 			<p style="font-size: 17px;">
 			
-				I'm someone who enjoys both the excitement of competition and the curiosity of discovery. From learning new things to just playing around, I'm always doing something. Click below to learn more about me.
+				As an immigrant, there's no shortage of things to learn in a foreign country. I am currently planning to major in engineering after high school. If you'd like to read more about my interest and future plans..
 			
 			</p>
 			<!-- end text -->
