--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 	<!-- copyright w/ automatically updating year -->
 	<div id="footer">
 	
-		Copyright &copy; <script>document.write(new Date().getFullYear())</script> Robert Perez II
+		"Paralyzing fear must be overcome by the fury of improvement." <br> <br> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Robert Perez II
 	
 	</div>
 	<!-- end copyright -->
