--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h1>
 
 				<!-- pagani image -->
-				<div style="float: left; padding: 30px 30px 30px 0px;">
+				<div style="float: left; padding: 30px 30px 15px 0px;">
 		
 					<img src="photos/per6RobertPagani.jpg" alt="Pagani in motion" width="500px">
 			
@@ -57,13 +57,25 @@
 			</h2>
 			<!-- end welcome label -->
 			
-			<!-- intro text -->
-			<p>
-		
-	    	  Hello, my name is Robert, and I am a high school student at El Camino High School in Oceanside, CA. I'm currently taking a web design class and have completed a graphic design course prior. Hope you enjoy my website.  <br>
+				<!-- intro text -->
+				<p>
+
+					Hello, my name is Robert, and I am a high school student at El Camino High School in Oceanside, CA. I'm currently taking a web design class and have completed a graphic design course prior. Hope you enjoy my website!  <br>
+
+				</p>
+				<!-- end intro -->
 			
-			</p>
-			<!-- end intro -->
+			<h2>
+			
+				A little about my home page...
+			
+			</h2>
+			
+				<p>
+
+					I created my home page to have the following: 1) A header with the title "Robert's website" using a cool font I found called Cinzel Decorative, 2) a navigation menu right below the header that is linked to other pages, 3) I have an area for the main content of the page between the header/navigation menu and the footer, and 4) a footer where I have a copyright. I embedded CSS in style tags (internal) or the style="" (inline) format within tags to style the content on the home page. However, some of the CSS is on a separate CSS file called a style sheet (external). This includes the image and welcome text, floating the image on the right so that the text wraps around it, the three columns below that pop up and casts a shadow to catch people's eyes as their cursor wanders along, and the colors of the header, footer, and navigation menu.
+
+				</p>
 			
 		</div>
 <!-- end main text -->
