--- a/favThings.html
+++ b/favThings.html
@@ -3,6 +3,140 @@
 
 	<head>
 	
+		<style>
+
+			.row > .column {
+				padding: 0px 0px 0px 20px;
+			}
+
+			.row:after {
+				content: "";
+				display: table;
+				clear: both;
+			}
+
+		/* Create four equal columns that floats next to eachother */
+			.column {
+				float: left;
+				width: 25%;
+			}
+
+		/* The Modal (background) */
+			.modal {
+				display: none;
+				position: fixed;
+				z-index: 1;
+				padding-top: 100px;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				overflow: auto;
+				background-color: black;
+			}
+
+		/* Modal Content */
+			.modal-content {
+				position: relative;
+				background-color: white;
+				margin: auto;
+				padding: 0;
+				width: 100%;
+				max-width: 1200px;
+			}
+
+		/* The Close Button */
+			.close {
+				color: white;
+				position: absolute;
+				top: 10px;
+				right: 25px;
+				font-size: 35px;
+				font-weight: bold;
+			}
+
+			.close:hover,
+			.close:focus {
+				color: #999;
+				text-decoration: none;
+				cursor: pointer;
+			}
+
+		/* Hide the slides by default */
+			.mySlides {
+				display: none;
+			}
+
+		/* Next & previous buttons */
+			.prev,
+			.next {
+				cursor: pointer;
+				position: absolute;
+				top: 50%;
+				width: auto;
+				padding: 16px;
+				margin-top: -50px;
+				color: white;
+				font-weight: bold;
+				font-size: 20px;
+				transition: 0.6s ease;
+				border-radius: 0 3px 3px 0;
+				user-select: none;
+				-webkit-user-select: none;
+			}
+
+		/* Position the "next button" to the right */
+			.next {
+				right: 0;
+				border-radius: 3px 0 0 3px;
+			}
+
+		/* On hover, add a black background color with a little bit see-through */
+			.prev:hover,
+			.next:hover {
+				color: black;
+				background-color: rgba(240, 197, 113, 0.5);
+			}
+
+		/* Number text (1/3 etc) */
+			.numbertext {
+				color: #FFFFFF;
+				background-color: rgba(0, 0, 0, 0.4);
+				font-size: 12px;
+				padding: 8px 12px;
+				position: absolute;
+				top: 0;
+			}
+
+		/* Caption text */
+			.caption-container {
+				text-align: center;
+				background-color: black;
+				padding: 2px 16px;
+				color: white;
+			}
+
+			img.demo {
+				opacity: 0.7;
+			}
+			
+			img.active.demo {
+				opacity: 1;
+			}
+
+			.demo:hover {
+				opacity: 1;
+			}
+
+			img.hover-shadow {
+				transition: 0.3s;
+			}
+
+			.hover-shadow:hover {
+				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+			}
+		
+		</style>
 		<link rel="stylesheet" type="text/css" href="myStyle.css">
 	
 	</head>
@@ -44,6 +178,150 @@
 
 		</div>
 <!-- end main text -->
+
+		
+		
+<!-- base gallery pattern adapted from w3schools -->
+<!-- Images used to open the lightbox -->
+<div class="row">
+	<div class="column">
+		<img src="photos/foodS.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow" alt="food">
+	</div>
+	<div class="column">
+		<img src="photos/soccerS.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" alt="soccer">
+	</div>
+	<div class="column">
+		<img src="photos/sleepS.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" alt="bed">
+	</div>
+	<div class="column">
+		<img src="photos/valorantS.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow" alt="valorant">
+	</div>
+</div>
+
+<!-- The Modal/Lightbox -->
+<div id="myModal" class="modal">
+	<span class="close cursor" onclick="closeModal()">&times;</span>
+	<div class="modal-content">
+
+	  <div class="mySlides">
+		<div class="numbertext">1 / 4</div>
+		  <img src="photos/foodW.jpg" style="width:100%" alt="food">
+		</div>
+
+		<div class="mySlides">
+			<div class="numbertext">2 / 4</div>
+			<img src="photos/soccerW.jpg" style="width:100%" alt="soccer">
+		</div>
+
+		<div class="mySlides">
+			<div class="numbertext">3 / 4</div>
+			<img src="photos/sleepW.jpg" style="width:100%" alt="bed">
+		</div>
+
+		<div class="mySlides">
+			<div class="numbertext">4 / 4</div>
+			<img src="photos/valorantW.jpg" style="width:100%" alt="valorant">
+		</div>
+
+	<!-- Next/previous controls -->
+		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+	<!-- Caption text -->
+		<div class="caption-container">
+			<p id="caption"></p>
+		</div>
+
+	<!-- Thumbnail image controls -->
+		<div class="column">
+			<img class="demo" src="photos/foodS.jpg" onclick="currentSlide(1)" alt="Food: I chose this particular picture of one of my favorite and cheap places to eat,
+																					Panda Express. I've gotten the same order for 5 years until they released the spicy
+																					orange chicken (substituted that for my orange chicken). I usually get a big plate
+																					with half fried rice and half chow mein then spicy orange chicken and honey walnut
+																					shrimp for the entrees.">
+		</div>
+
+		<div class="column">
+			<img class="demo" src="photos/soccerS.jpg" onclick="currentSlide(2)" alt="Soccer: My favorite sport would actually go to soccer. I think one of the biggest
+																					  factors going into liking soccer would have to be my legs. Ever since I was a kid,
+																					  I could generate a decent amount of power behind each kick. As a kid and even now,
+																					  that's really amusing.">
+		</div>
+
+		<div class="column">
+			<img class="demo" src="photos/sleepS.jpg" onclick="currentSlide(3)" alt="Sleep: Sleep in my opinion, is singlehandedly the most important biological function
+																					 we have as humans. I enjoy it beccause it's really versatile in its benefits and
+																					 theoretically has no drawbacks. I like sleeping, who would argue about that?">
+		</div>
+
+		<div class="column">
+			<img class="demo" src="photos/valorantS.jpg" onclick="currentSlide(4)" alt="Valorant: Valorant is just a game where I can play to ease myself. It's fun and
+																						thrilling, especially when played with friends. Sometimes, playing with random
+																						people doesn't hurt either. I used to be good but since school has been slowly
+																						creeping towards more and more work, I just don't have the same amount of time
+																						and exposure to its mechanics.">
+		</div>
+	</div>
+</div>
+		
+		
+		
+		
+		
+		
+		
+		<!-- JavaScript -->
+	<script>
+			
+		// Open the Modal
+		function openModal() {
+			document.getElementById("myModal").style.display = "block";
+		}
+
+		// Close the Modal
+		function closeModal() {
+			document.getElementById("myModal").style.display = "none";
+		}
+
+		var slideIndex = 1;
+		showSlides(slideIndex);
+
+		// Next/previous controls
+		function plusSlides(n) {
+			showSlides(slideIndex += n);
+		}
+
+		// Thumbnail image controls
+			function currentSlide(n) {
+				showSlides(slideIndex = n);
+			}
+
+		function showSlides(n) {
+			var i;
+			var slides = document.getElementsByClassName("mySlides");
+			var dots = document.getElementsByClassName("demo");
+			var captionText = document.getElementById("caption");
+			
+			if (n > slides.length) {
+				slideIndex = 1
+			}
+			if (n < 1) {
+				slideIndex = slides.length
+			}
+			for (i = 0; i < slides.length; i++) {
+				slides[i].style.display = "none";
+			}
+			for (i = 0; i < dots.length; i++) {
+				dots[i].className = dots[i].className.replace(" active", "");
+			}
+				
+			slides[slideIndex-1].style.display = "block";
+			dots[slideIndex-1].className += " active";
+			captionText.innerHTML = dots[slideIndex-1].alt;
+		}
+			
+		</script>
+		<!-- end JavaScript -->
 	
 	</body>
 
@@ -110,7 +388,7 @@
 	<!-- copyright w/ automatically updating year -->
 	<div id="footer">
 	
-		"Paralyzing fear must be overcome by the fury of improvement." <br> <br> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Robert Perez II
+		"Paralyzing fear must be overcome by fiery improvement." <br> <br> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Robert Perez II
 	
 	</div>
 	<!-- end copyright -->
