--- a/aboutMe.html
+++ b/aboutMe.html
@@ -146,6 +146,20 @@
 				
 			</p>
 			<!-- end Goals text -->
+			
+			<h2>
+			
+				My design choices
+			
+			</h2>
+			
+				<p>
+
+					I created my about me page to have the following: 
+					<span style="line-height: 33px;"> <br> 1) Info cards, supplement to picture/video that needs them, that expand towards the center of the page with additional information about the graphic.
+					<br> 2) An embedded video of Twenty One, the Roblox game that I mentioned that plays on the page without opening another tab to view the video.
+					<br> 3) Borders around the graphics on the page to create a structured, cut feel. To make sure that each picture fit in the same borders, I used photoshop to edit them all to have the same width and height. For the video, I used CSS to make the width and height the same as the pictures. </span>
+				</p>
 
 		</div>
 <!-- end main text -->
