--- a/favThings.html
+++ b/favThings.html
@@ -5,10 +5,6 @@
 	
 		<style>
 
-			.row > .column {
-				padding: 0px 0px 0px 20px;
-			}
-
 			.row:after {
 				content: "";
 				display: table;
@@ -94,7 +90,7 @@
 		/* On hover, add a black background color with a little bit see-through */
 			.prev:hover,
 			.next:hover {
-				color: black;
+				color: white;
 				background-color: rgba(240, 197, 113, 0.5);
 			}
 
@@ -111,13 +107,15 @@
 		/* Caption text */
 			.caption-container {
 				text-align: center;
-				background-color: black;
+				background-color: #98B5D9;
 				padding: 2px 16px;
 				color: white;
+				min-height: 120px;
+				max-height: 135px;
 			}
 
 			img.demo {
-				opacity: 0.7;
+				opacity: 0.4;
 			}
 			
 			img.active.demo {
@@ -175,6 +173,23 @@
 
 			</h1>
 			<!-- end title -->
+			
+				<h2>
+
+					My design choices
+
+				</h2>
+
+					<p>
+
+						I made my favorite things page to have the following:
+						<span> <br> 1) A lightbox that opens up when clicking onto the 4 images. To navigate the images, there are next and previous buttons or you can select the image you want to jump to.
+						<br> 2) A supplementary caption (within the lightbox) that explains why the 4 images represent 4 things that I like (they are not in any particular order).
+						<br> 3) I also customized the lightbox as much as possible to match with the color scheme of my page. 
+						<br> 4) To make sure that all the pictures are of the same size, I transferred them all to photoshop and cropped each photo to have the same proportions. I also made two sets of photos: the thumbnails and the wide pictures. The thumbnails will serve as the buttons to both open and navigate the lightbox. The wide pictures will serve as the main content for the lightbox.
+						<br> 5) A cinnamoroll emoticon, that changes when hovered over and is easily editable with the use of CSS variables to maintain structure, to represent my girlfriend because she is one of my favorite things. </span>
+
+					</p>
 
 		</div>
 <!-- end main text -->
