--- a/index.html
+++ b/index.html
@@ -67,13 +67,18 @@
 			
 			<h2>
 			
-				A little about my home page...
+				My design choices
 			
 			</h2>
 			
 				<p>
 
-					I created my home page to have the following: 1) A header with the title "Robert's website" using a cool font I found called Cinzel Decorative, 2) a navigation menu right below the header that is linked to other pages, 3) I have an area for the main content of the page between the header/navigation menu and the footer, and 4) a footer where I have a copyright. I embedded CSS in style tags (internal) or the style="" (inline) format within tags to style the content on the home page. However, some of the CSS is on a separate CSS file called a style sheet (external). This includes the image and welcome text, floating the image on the right so that the text wraps around it, the three columns below that pop up and casts a shadow to catch people's eyes as their cursor wanders along, and the colors of the header, footer, and navigation menu.
+					I created my home page to have the following:
+					<span style="line-height: 33px;"> <br> 1) A header with the title "Robert's website" using a cool font I found called Cinzel Decorative
+					<br> 2) A navigation menu right below the header that is linked to other pages
+					<br> 3) I have an area for the main content of the page between the header/navigation menu and the footer
+					<br> 4) A footer where I have a copyright. I embedded CSS in style tags (internal) or the style="" (inline) format within tags to style the content on the home page </span>
+					<br> 5) Three columns that have CSS that triggers when hovered over, and 6) buttons on each column that have CSS that triggers when hovered over that are linked to other pages on the website. However, some of the CSS is on a separate CSS file called a style sheet (external). This includes the image and welcome text, floating the image on the right so that the text wraps around it, the three columns below that pop up and casts a shadow to catch people's eyes as their cursor wanders along, and the colors of the header, footer, and navigation menu.
 
 				</p>
 			
