--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,9 +10,9 @@
 	
 	
 <!-- Header -->
-	<div id="title">
+	<div id="titleDiv">
 			
-		Robert's Website
+		<span id="title">Robert's Website</span>
 			
 	</div>
 <!-- end Header -->
@@ -41,6 +41,21 @@
 
 			</h1>
 			<!-- end title -->
+			
+			<!-- introduction? -->
+			
+			<h2>
+			
+				Why am I here?
+			
+			</h2>
+			
+				<p>
+			
+					The main reason on why I took this pathway is because I wanted to broaden my knowledge on coding languages. I have taken two previous classes that covered Java, JavaScript, and a bit of Python. I have also exposed myself to HTML prior to this class on my own for a passion project in 9th grade about making an app for budgeting. To reflect on the previous class in the pathway, Graphic Design has helped me refine on my capabilities in visual aspects of digital work. Hopefully, this class will help me understand the ins and outs of a website.
+			
+				</p>
+			
 			
 			<!-- Interests label -->
 			<h2>
@@ -155,10 +170,12 @@
 			
 				<p>
 
-					I created my about me page to have the following: 
-					<span style="line-height: 33px;"> <br> 1) Info cards, supplement to picture/video that needs them, that expand towards the center of the page with additional information about the graphic.
-					<br> 2) An embedded video of Twenty One, the Roblox game that I mentioned that plays on the page without opening another tab to view the video.
-					<br> 3) Borders around the graphics on the page to create a structured, cut feel. To make sure that each picture fit in the same borders, I used photoshop to edit them all to have the same width and height. For the video, I used CSS to make the width and height the same as the pictures. </span>
+					I created my about me page to have the following (not in any particular order): 
+					<br> <b>1)</b> Info cards, supplement to picture/video that needs them, that expand towards the center of the page with additional information about the graphic. The bulk of the code was produced by ChatGPT, although I did refine bits and pieces to produce the effect that I wanted. 
+					<br> <b>2)</b> An embedded video of Twenty One, the Roblox game that I mentioned that plays on the page without opening another tab to view the video.
+					<br> <b>3)</b> On the soccer info card, there is a link to Song Heung-Min's Wikipedia page to learn more about him and his career.
+					<br> <b>4)</b> Borders around the graphics on the page to create a structured, cut feel. To make sure that each picture fit in the same borders, I used photoshop to edit them all to have the same width and height. For the video, I used CSS to make the width and height the same as the pictures.
+					<br> <b>5)</b> Graphics to go along with their corresponding paragraph of text that explains my interests.
 				</p>
 
 		</div>
@@ -171,7 +188,7 @@
 	<!-- copyright w/ automatically updating year -->
 	<div id="footer">
 	
-		"Paralyzing fear must be overcome by fiery improvement." <br> <br> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Robert Perez II
+		"Paralyzing fear must be overcome by fiery improvement." <br> <br> <b>Copyright &copy; <script>document.write(new Date().getFullYear())</script></b> Robert Perez II
 	
 	</div>
 	<!-- end copyright -->
