--- a/favThings.html
+++ b/favThings.html
@@ -110,8 +110,8 @@
 				background-color: #98B5D9;
 				padding: 2px 16px;
 				color: white;
-				min-height: 120px;
-				max-height: 135px;
+				min-height: 125px;
+				max-height: 125px;
 			}
 
 			img.demo {
@@ -142,9 +142,9 @@
 	
 	
 <!-- Header -->
-	<div id="title">
+	<div id="titleDiv">
 			
-		Robert's Website
+		<span id="title">Robert's Website</span>
 			
 	</div>
 <!-- end Header -->
@@ -328,11 +328,11 @@
 					<p>
 
 						I made my favorite things page to have the following:
-						<span> <br> 1) A lightbox that opens up when clicking onto the 4 images. To navigate the images, there are next and previous buttons or you can select the image you want to jump to.
-						<br> 2) A supplementary caption (within the lightbox) that explains why the 4 images represent 4 things that I like (they are not in any particular order).
-						<br> 3) I also customized the lightbox as much as possible to match with the color scheme of my page. 
-						<br> 4) To make sure that all the pictures are of the same size, I transferred them all to photoshop and cropped each photo to have the same proportions. I also made two sets of photos: the thumbnails and the wide pictures. The thumbnails will serve as the buttons to both open and navigate the lightbox. The wide pictures will serve as the main content for the lightbox.
-						<br> 5) A cinnamoroll emoticon, that changes when hovered over and is easily editable with the use of CSS variables to maintain structure, to represent my girlfriend because she is one of my favorite things. </span>
+						<br> <b>1)</b> A lightbox that opens up when clicking onto the 4 images. To navigate the images, there are next and previous buttons or you can select the image you want to jump to.
+						<br> <b>2)</b> A supplementary caption (within the lightbox) that explains why the 4 images represent 4 things that I like (they are not in any particular order).
+						<br> <b>3)</b> I also customized the lightbox as much as possible to match with the color scheme of my page. 
+						<br> <b>4)</b> To make sure that all the pictures are of the same size, I transferred them all to photoshop and cropped each photo to have the same proportions. I also made two sets of photos: the thumbnails and the wide pictures. The thumbnails will serve as the buttons to both open and navigate the lightbox. The wide pictures will serve as the main content for the lightbox.
+						<br> <b>5)</b> A cinnamoroll emoticon, that changes when hovered over and is easily editable with the use of CSS variables to maintain structure, to represent my girlfriend because she is one of my favorite things.
 
 					</p>
 
@@ -404,7 +404,7 @@
 	<!-- copyright w/ automatically updating year -->
 	<div id="footer">
 	
-		"Paralyzing fear must be overcome by fiery improvement." <br> <br> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Robert Perez II
+		"Paralyzing fear must be overcome by fiery improvement." <br> <br> <b>Copyright &copy; <script>document.write(new Date().getFullYear())</script></b> Robert Perez II
 	
 	</div>
 	<!-- end copyright -->
