--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	
 	
 <!-- Header -->
-	<div id="title">
+	<div id="titleDiv">
 			
-		Robert's Website
+		<span id="title">Robert's Website</span>
 			
 	</div>
 <!-- end Header -->
@@ -74,11 +74,12 @@
 				<p>
 
 					I created my home page to have the following:
-					<span style="line-height: 33px;"> <br> 1) A header with the title "Robert's website" using a cool font I found called Cinzel Decorative
-					<br> 2) A navigation menu right below the header that is linked to other pages
-					<br> 3) I have an area for the main content of the page between the header/navigation menu and the footer
-					<br> 4) A footer where I have a copyright. I embedded CSS in style tags (internal) or the style="" (inline) format within tags to style the content on the home page </span>
-					<br> 5) Three columns that have CSS that triggers when hovered over, and 6) buttons on each column that have CSS that triggers when hovered over that are linked to other pages on the website. However, some of the CSS is on a separate CSS file called a style sheet (external). This includes the image and welcome text, floating the image on the right so that the text wraps around it, the three columns below that pop up and casts a shadow to catch people's eyes as their cursor wanders along, and the colors of the header, footer, and navigation menu.
+					<br> <b>1)</b> A header with the title "Robert's website" using a cool font I found called Cinzel Decorative.
+					<br> <b>2)</b> A navigation menu right below the header that is linked to other pages.
+					<br> <b>3)</b> I have an area for the main content of the page between the header/navigation menu and the footer.
+					<br> <b>4)</b> A footer where I have a copyright. I embedded CSS in style tags (internal) or the style="" (inline) format within tags to style the content on the home page.
+					<br> <b>5)</b> Three columns that have CSS that triggers when hovered over, and 6) buttons on each column that have CSS that triggers when hovered over that are linked to other pages on the website. However, some of the CSS is on a separate CSS file called a style sheet (external). This includes the image and welcome text, floating the image on the right so that the text wraps around it, the three columns below that pop up and casts a shadow to catch people's eyes as their cursor wanders along, and the colors of the header, footer, and navigation menu.
+					<br> <b>6)</b> I also made it so when the cursor hovers over the title of the website, the text gets slightly bigger. I then used ChatGPT to make it so a flash of yellow slides across the title when hovered over.
 
 				</p>
 			
@@ -209,7 +210,7 @@
 	<!-- copyright w/ automatically updating year -->
 	<div id="footer">
 	
-		"Paralyzing fear must be overcome by fiery improvement." <br> <br> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Robert Perez II
+		"Paralyzing fear must be overcome by fiery improvement." <br> <br> <b>Copyright &copy; <script>document.write(new Date().getFullYear())</script></b> Robert Perez II
 	
 	</div>
 	<!-- end copyright -->
