--- a/contactInfo.html
+++ b/contactInfo.html
@@ -10,9 +10,9 @@
 	
 	
 <!-- Header -->
-	<div id="title">
+	<div id="titleDiv">
 			
-		Robert's Website
+		<span id="title">Robert's Website</span>
 			
 	</div>
 <!-- end Header -->
@@ -52,7 +52,7 @@
 	<!-- copyright w/ automatically updating year -->
 	<div id="footer">
 	
-		"Paralyzing fear must be overcome by fiery improvement." <br> <br> Copyright &copy; <script>document.write(new Date().getFullYear())</script> Robert Perez II
+		"Paralyzing fear must be overcome by fiery improvement." <br> <br> <b>Copyright &copy; <script>document.write(new Date().getFullYear())</script></b> Robert Perez II
 	
 	</div>
 	<!-- end copyright -->
