--- a/aboutMe.html
+++ b/aboutMe.html
@@ -188,7 +188,7 @@
 	<!-- copyright w/ automatically updating year -->
 	<div id="footer">
 	
-		"Paralyzing fear must be overcome by fiery improvement." <br> <br> <b>Copyright &copy; <script>document.write(new Date().getFullYear())</script></b> Robert Perez II
+		"Paralyzing fear must be overcome by fiery improvement." <br> <br> <span id="footerCopyright">Copyright &copy; <script>document.write(new Date().getFullYear())</script></span> Robert Perez II
 	
 	</div>
 	<!-- end copyright -->
