--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<!-- text -->
 			<p style="font-size: 17px;">
 			
-				As an immigrant, there's no shortage of things to learn in a foreign country. I am currently planning to major in engineering after high school. If you'd like to read more about my interest and future plans..
+				There's no shortage of things that I consider are a part of me. However, that's too much text for such little space. If you'd like to read more about a few of my interest and a bit of my future plans...
 			
 			</p>
 			<!-- end text -->
@@ -145,7 +145,7 @@
 			<!-- text -->
 			<p style="font-size: 17px;">
 			
-				
+				A series of images that represent what I like 
 			
 			</p>
 			<!-- end text -->
