--- a/aboutMe.html
+++ b/aboutMe.html
@@ -67,7 +67,7 @@
 			
 			
 			
-			<!-- info box -->	
+			<!-- info box 1 -->	
 			<div class="image-box" style="float: left;">
 				
 				<!-- embed video from ChatGPT -->
@@ -101,7 +101,7 @@
 			<!-- end p1 -->
 			
 			
-			<!-- info box -->
+			<!-- info box 2 -->
 				<div class="image-box expand-left" style="float: right;">
 
 					<img src="photos/soccer.jpg" alt="soccer">
