--- a/contactInfo.html
+++ b/contactInfo.html
@@ -32,15 +32,46 @@
 	<body>
 	
 <!-- main text -->
-		<div id="main">
-
-			<!-- title -->
+		<div id="main" style="text-align: center;">
+			
 			<h1>
-
-				<br> Contact Info
-
+			
+				<br> <br> Thank you!
+			
 			</h1>
-			<!-- end title -->
+			
+				<p>
+			
+					I appreciate your time and attention to browse <br> through my website and looking through my content. <br> Have something to say? Here is my number <br> or shoot me an email!
+			
+				</p>
+			
+				<h2> 760-XXX-XXX </h2>
+			
+			
+			
+			<div style="text-align: center;">
+			<!-- form -->
+			<!-- Do not change the code! -->
+			<br> <div style="float: left; margin-left: 15%;">
+			
+				<a id="foxyform_embed_link_983881" href="http://www.foxyform.com/"></a>
+				
+				<script type="text/javascript">
+				(function(d, t){
+				   var g = d.createElement(t),
+					   s = d.getElementsByTagName(t)[0];
+				   g.src = "http://www.foxyform.com/js.php?id=983881&sec_hash=bf0691ee501&width=350px";
+				   s.parentNode.insertBefore(g, s);
+				}(document, "script"));
+				</script>
+			
+			</div>
+			<!-- Do not change the code! -->
+			
+			<!-- map -->
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2627.2458890369103!2d-117.31705398079606!3d33.21826620238196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc71007aa69e15%3A0x58889d03405bb268!2s400%20Rancho%20Del%20Oro%20Dr%2C%20Oceanside%2C%20CA%2092057!5e1!3m2!1sen!2sus!4v1759432011081!5m2!1sen!2sus" width="600" height="450" style="border:0; float: right; margin-right: 15%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
 
 		</div>
 <!-- end main text -->
@@ -48,6 +79,18 @@
 	</body>
 
 
+	
+	
+	
+	
+	
+	
+		<!-- buffer -->
+	<div style="clear: both;">
+	
+	</div>
+	<!-- end buffer -->
+	
 	
 	<!-- copyright w/ automatically updating year -->
 	<div id="footer">
