--- a/favThings.html
+++ b/favThings.html
@@ -110,8 +110,7 @@
 				background-color: #98B5D9;
 				padding: 2px 16px;
 				color: white;
-				min-height: 125px;
-				max-height: 125px;
+				min-height: 115px;
 			}
 
 			img.demo {
@@ -229,32 +228,24 @@
 
 	<!-- Thumbnail image controls -->
 		<div class="column">
-			<img class="demo" src="photos/foodS.jpg" onclick="currentSlide(1)" alt="Food: I chose this particular picture of one of my favorite and cheap places to eat,
-																					Panda Express. I've gotten the same order for 5 years until they released the spicy
-																					orange chicken (substituted that for my orange chicken). I usually get a big plate
-																					with half fried rice and half chow mein then spicy orange chicken and honey walnut
-																					shrimp for the entrees.">
+			<img class="demo" src="photos/foodS.jpg" onclick="currentSlide(1)" alt="Food: I chose this picture of Panda Express because one of my favorite cheap spots 
+																					to eat.	For years I ordered the same thing until they released spicy orange chicken, 
+																					which I now get with fried rice, chow mein, and honey walnut shrimp.">
 		</div>
 
 		<div class="column">
-			<img class="demo" src="photos/soccerS.jpg" onclick="currentSlide(2)" alt="Soccer: My favorite sport would actually go to soccer. I think one of the biggest
-																					  factors going into liking soccer would have to be my legs. Ever since I was a kid,
-																					  I could generate a decent amount of power behind each kick. As a kid and even now,
-																					  that's really amusing.">
+			<img class="demo" src="photos/soccerS.jpg" onclick="currentSlide(2)" alt="Soccer: My favorite sport is soccer, largely because I’ve always been able to kick 
+																					  with a lot of power.">
 		</div>
 
 		<div class="column">
-			<img class="demo" src="photos/sleepS.jpg" onclick="currentSlide(3)" alt="Sleep: Sleep in my opinion, is singlehandedly the most important biological function
-																					 we have as humans. I enjoy it beccause it's really versatile in its benefits and
-																					 theoretically has no drawbacks. I like sleeping, who would argue about that?">
+			<img class="demo" src="photos/sleepS.jpg" onclick="currentSlide(3)" alt="Sleep: I think sleep is the most enjoyable and benefitial thing ever. Refreshing, 
+																					 healthy, and you don't have to do anything.">
 		</div>
 
 		<div class="column">
-			<img class="demo" src="photos/valorantS.jpg" onclick="currentSlide(4)" alt="Valorant: Valorant is just a game where I can play to ease myself. It's fun and
-																						thrilling, especially when played with friends. Sometimes, playing with random
-																						people doesn't hurt either. I used to be good but since school has been slowly
-																						creeping towards more and more work, I just don't have the same amount of time
-																						and exposure to its mechanics.">
+			<img class="demo" src="photos/valorantS.jpg" onclick="currentSlide(4)" alt="Valorant: Valorant is a fun, thrilling game I use to relax—with or without friends. 
+																						I used to play more, but schoolwork has cut into my time with it.">
 		</div>
 	</div>
 </div>
