--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			<!-- text -->
 			<p style="font-size: 17px;">
 			
-				A series of images that represent what I like 
+				This page has a series of images that represent what I like accompanied by short descriptions. It also has a gallery of digital works that I think represent my current capabilities with Photoshop and Illustrator.
 			
 			</p>
 			<!-- end text -->
@@ -179,7 +179,7 @@
 			<!-- text -->
 			<p style="font-size: 17px;">
 			
-				
+				Here is my contact information. Feel free to reach out if you want to provide some feedback, words of wisdom, or just say you enjoyed my website! 
 			
 			</p>
 			<!-- end text -->
