--- a/contactInfo.html
+++ b/contactInfo.html
@@ -72,6 +72,28 @@
 			<!-- map -->
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2627.2458890369103!2d-117.31705398079606!3d33.21826620238196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc71007aa69e15%3A0x58889d03405bb268!2s400%20Rancho%20Del%20Oro%20Dr%2C%20Oceanside%2C%20CA%2092057!5e1!3m2!1sen!2sus!4v1759432011081!5m2!1sen!2sus" width="600" height="450" style="border:0; float: right; margin-right: 15%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
+			
+	<!-- buffer -->
+	<div style="clear: both;">
+	
+	</div>
+	<!-- end buffer -->
+			
+			<div style="text-align: left; margin-top: 40px;">
+			
+				<h2>
+
+					My design choices
+
+				</h2>
+				
+					<p>
+
+						I wrote a "thank you" message for visitors, assuming they see this page last after exploring the rest of the site. I created a contact form using foxyform.com and customized it to match my website's color palette, including fields for name, email, and message, with the email and message required while the name is optional. The form included a pre-made submit button, and I also embedded a map of the school I attend using &lt;iframe&gt;.
+
+					</p>
+			
+			</div>
 
 		</div>
 <!-- end main text -->
@@ -85,7 +107,7 @@
 	
 	
 	
-		<!-- buffer -->
+	<!-- buffer -->
 	<div style="clear: both;">
 	
 	</div>
