--- a/favThings.html
+++ b/favThings.html
@@ -368,12 +368,7 @@
 
 					<p>
 
-						I made my favorite things page to have the following:
-						<br> <b>1)</b> A lightbox that opens up when clicking onto the 4 images. To navigate the images, there are next and previous buttons or you can select the image you want to jump to.
-						<br> <b>2)</b> A supplementary caption (within the lightbox) that explains why the 4 images represent 4 things that I like (they are not in any particular order).
-						<br> <b>3)</b> I also customized the lightbox as much as possible to match with the color scheme of my page. 
-						<br> <b>4)</b> To make sure that all the pictures are of the same size, I transferred them all to photoshop and cropped each photo to have the same proportions. I also made two sets of photos: the thumbnails and the wide pictures. The thumbnails will serve as the buttons to both open and navigate the lightbox. The wide pictures will serve as the main content for the lightbox.
-						<br> <b>5)</b> A cinnamoroll emoticon, that changes when hovered over and is easily editable with the use of CSS variables to maintain structure, to represent my girlfriend because she is one of my favorite things.
+						I made my favorite things page to have a lightbox that opens when clicking on the four images, with next and previous buttons or the option to jump directly to a specific image. A supplementary caption within the lightbox explains why the four images represent things I like, in no particular order. I customized the lightbox as much as possible to match the color scheme of my page. To ensure all pictures are the same size, I cropped them in Photoshop and created two sets: thumbnails for navigation and wide pictures for the main lightbox content. A Cinnamoroll emoticon, which changes on hover and is easily editable using CSS variables, represents my girlfriend because she is one of my favorite things.
 
 					</p>
 
