--- a/contactInfo.html
+++ b/contactInfo.html
@@ -61,7 +61,7 @@
 				(function(d, t){
 				   var g = d.createElement(t),
 					   s = d.getElementsByTagName(t)[0];
-				   g.src = "http://www.foxyform.com/js.php?id=983881&sec_hash=bf0691ee501&width=350px";
+				   g.src = "https://www.foxyform.com/js.php?id=983881&sec_hash=bf0691ee501&width=350px";
 				   s.parentNode.insertBefore(g, s);
 				}(document, "script"));
 				</script>
