--- a/contactInfo.html
+++ b/contactInfo.html
@@ -55,7 +55,7 @@
 			<!-- Do not change the code! -->
 			<br> <div style="float: left; margin-left: 15%;">
 			
-				<a id="foxyform_embed_link_983881" href="http://www.foxyform.com/"></a>
+				<a id="foxyform_embed_link_983881" href="https://www.foxyform.com/"></a>
 				
 				<script type="text/javascript">
 				(function(d, t){
