--- a/contactInfo.html
+++ b/contactInfo.html
@@ -55,13 +55,13 @@
 			<!-- Do not change the code! -->
 			<br> <div style="float: left; margin-left: 15%;">
 			
-				<a id="foxyform_embed_link_983881" href="https://www.foxyform.com/"></a>
+				<a id="foxyform_embed_link_983881" href="http://www.foxyform.com/"></a>
 				
 				<script type="text/javascript">
 				(function(d, t){
 				   var g = d.createElement(t),
 					   s = d.getElementsByTagName(t)[0];
-				   g.src = "https://www.foxyform.com/js.php?id=983881&sec_hash=bf0691ee501&width=350px";
+				   g.src = "http://www.foxyform.com/js.php?id=983881&sec_hash=bf0691ee501&width=350px";
 				   s.parentNode.insertBefore(g, s);
 				}(document, "script"));
 				</script>
